--- a/LoginPINO/app/src/main/res/layout/activity_main.xml
+++ b/LoginPINO/app/src/main/res/layout/activity_main.xml
@@ -15,23 +15,23 @@
             android:layout_marginStart="16dp" android:id="@+id/btn_tutorial" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintEnd_toStartOf="@+id/button2"
+            app:layout_constraintEnd_toStartOf="@+id/btnfb"
     />
     <Button
             android:text="Facebook"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button2"
+            android:id="@+id/btnfb"
             app:layout_constraintStart_toEndOf="@+id/btn_tutorial" app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintEnd_toStartOf="@+id/button3" android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/btncall" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
     <Button
             android:text="Call"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:layout_marginRight="32dp"
-            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/button3"
-            app:layout_constraintStart_toEndOf="@+id/button2" app:layout_constraintHorizontal_bias="0.5"
+            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/btncall"
+            app:layout_constraintStart_toEndOf="@+id/btnfb" app:layout_constraintHorizontal_bias="0.5"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
 </android.support.constraint.ConstraintLayout>
