--- a/LoginPINO/app/src/main/res/layout/activity_tutorial.xml
+++ b/LoginPINO/app/src/main/res/layout/activity_tutorial.xml
@@ -11,14 +11,14 @@
         android:layout_height="?actionBarSize"
         android:layout_alignParentTop="true">
         <ImageView
-            android:id="@+id/iv_Back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="16dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_back"/>
+                android:id="@+id/iv_Back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="16dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_back" android:layout_alignParentLeft="true"/>
         <com.ivankocijan.magicviews.views.MagicTextView
             android:id="@+id/tv_Title_ActionBar"
             android:layout_width="wrap_content"
