--- a/LoginPINO/app/src/main/res/layout/activity_pdf_view.xml
+++ b/LoginPINO/app/src/main/res/layout/activity_pdf_view.xml
@@ -35,9 +35,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white">
-        <com.github.barteksc.pdfviewer.PDFView
-                android:id="@+id/pdfView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+
+        <WebView
+            android:id="@+id/webview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </LinearLayout>
 </LinearLayout>
