--- a/LoginPINO/app/src/main/res/layout/activity_pdf_view.xml
+++ b/LoginPINO/app/src/main/res/layout/activity_pdf_view.xml
@@ -31,14 +31,22 @@
             android:textSize="18sp"
             app:typeFace="HelveticaNeue_Medium.otf" />
     </RelativeLayout>
+    <ProgressBar
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:id="@+id/progressBar"/>
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white">
 
-        <WebView
-            android:id="@+id/webview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        <com.github.barteksc.pdfviewer.PDFView
+                android:id="@+id/pdfView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+        >
+
+        </com.github.barteksc.pdfviewer.PDFView>
     </LinearLayout>
 </LinearLayout>
